// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`symbols component > ctrl+/ cycles symbol type filter and reloads > renders with type filter in title > after cycle - all filter 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Symbols [*] (4/4)[0m          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./src/models.ts[0m                                 [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰠱 Animal [38;2;76;62;118msrc/models.ts:1[39m[22m[39m   [49m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m 󰊕 parseInput [38;2;76;62;118msrc/utils.ts:1[39m[38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m 󰆧 render [38;2;76;62;118msrc/view.ts:5[39m[0m     [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m 󰙅 Status [38;2;76;62;118msrc/types.ts:1[39m[0m    [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+y types [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`symbols component > ctrl+/ cycles symbol type filter and reloads > renders with type filter in title > after cycle - enum filter 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Symbols [enum] (2/2)[0m       [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./src/types.ts[0m                                  [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰙅 Status [38;2;76;62;118msrc/types.ts:1[39m[22m[39m    [49m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m 󰙅 Role [38;2;76;62;118msrc/types.ts:10[39m[0m     [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+y types [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`symbols component > ctrl+/ cycles symbol type filter and reloads > renders with type filter in title > after cycle - function filter 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Symbols [function] (2/2)[0m   [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./src/utils.ts[0m                                  [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰊕 parseInput [38;2;76;62;118msrc/utils.ts:1[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m 󰊕 formatOutput [38;2;76;62;118msrc/utils.ts[39m[38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+y types [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`symbols component > ctrl+/ cycles symbol type filter and reloads > renders with type filter in title > after cycle - method filter 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Symbols [method] (2/2)[0m     [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./src/view.ts[0m                                   [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰆧 render [38;2;76;62;118msrc/view.ts:5[39m[22m[39m     [49m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m 󰆧 update [38;2;76;62;118msrc/view.ts:22[39m[0m    [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+y types [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`symbols component > ctrl+/ cycles symbol type filter and reloads > renders with type filter in title > initial - class filter 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Symbols [class] (2/2)[0m      [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./src/models.ts[0m                                 [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰠱 Animal [38;2;76;62;118msrc/models.ts:1[39m[22m[39m   [49m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m 󰠱 Plant [38;2;76;62;118msrc/models.ts:32[39m[0m   [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+y types [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;
